# cookbook

./: README.md
classification_with_confidence/: README.md  classification_with_confidence.py
cost_tracking/: README.md  cost_tracking.py
stateful_chain_builder/: README.md  pyproject.toml  stateful_chain_builder.py
structured_output/: README.md  pyproject.toml
structured_output/examples/: patching.py  type_with_defaults.py  unions.py
structured_output/structured_output/: openai_wrapper.py  type_helpers.py
structured_output/tests/: test_pydantic_helpers.py
tracing/: README.md  tracing.py
